# notme-secrets

./: .gitignore  Dockerfile  Makefile  alembic.ini  conftest.py  context.py  dot_init.py  env.example  log.py  main_app.py  main_shared.py  pyproject.toml  readme.md
deploy/: pod.yml
migrations/: env.py
models/: __init__.py  bookmark.py  box.py  bucket.py  city.py  conv_msg.py  conv_obj.py  conv_req.py  crypto_key.py  place.py  region.py  secret.py  secret_data.py  user.py
routers/: 500.html  base.html  home.html  pagination.html  utils.py
routers/auth/: login.html  login.py  login_error.html  login_oauth.py  logout.py
routers/bookmarks/: bookmarks_list.py  bookmarks_manage.py  edit.html  edit_categories.html  edit_links.html  edit_name.html  edit_notes.html  edit_tags.html  edit_uri.html  list.html  list_table.html  new.html
routers/geo/: geo_api.py  geo_main.py  geo_mapbox.py  geo_maps.py  geo_places.py  geo_query.html  geo_query_result.html
routers/keys/: keys_list.py  list.html  list_table.html
routers/places/: edit.html  edit_brands.html  edit_name.html  edit_notes.html  edit_source.html  edit_tags.html  edit_website.html  places_manage.py  search_brands_result.html  search_tags_result.html
routers/secrets/: list.html  list_table.html  new.html  new_password.html  secret_show.html  secrets_list.html  secrets_list.py  secrets_list_table.html  secrets_manage.py  show.html
routers/sse/: sse_main.py
routers/turnstile/: turnstile.html  turnstile.py
scripts/: agent-utils  city-utils  db-utils  docker-utils  key-utils  place-utils  places-utils  region-utils  tools-utils  user-utils
scripts/dev/: env-init
services/agents/: __init__.py  create.py  output.py  serialize.py  stream.py
services/anthropic/: __init__.py  docs.py  files.py  query.py  stream.py
services/bookmarks/: __init__.py  create.py  get.py  list.py
services/cities/: __init__.py  create.py  get.py  list.py
services/console/: __init__.py  utils.py
services/convs/: __init__.py  create.py  delete.py  get.py
services/crypto_keys/: __init__.py  create.py  get.py  list.py
services/database/: __init__.py  session.py  truncate.py
services/geo/: __init__.py  get.py
services/geoapify/: __init__.py  search.py
services/goog_geocode/: __init__.py  search.py  utils.py
services/goog_places/: __init__.py  get.py  search.py  utils.py
(+145 files in other folders)
